src/objects/ACCL__Sales_Folder__c.object
<CustomObject>
    <description>This object contains the attributes associated with the Sales Folder.</description>
    <fields>
        <fullName>ACCL__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the customer.</description>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.ACCL__Sales_Org__c</field>
                <operation>equals</operation>
                <valueField>Account.ACCL__Sales_Org__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Folders</relationshipLabel>
        <relationshipName>Sales_Folders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active flag.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Attachment_Catalogue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Attachment Catalogue.</description>
        <label>Sales Folder Icon</label>
        <referenceTo>ACCL__Attachment_Catalogue__c</referenceTo>
        <relationshipLabel>Sales Folders</relationshipLabel>
        <relationshipName>Sales_Folders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <description>Holds the description of language 1.</description>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <description>Holds the description of language 2.</description>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <description>Holds the description of language 3.</description>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_Sell_Sheet_Count__c</fullName>
        <description>This field will have Sell sheet count</description>
        <label>Sell Sheet Count</label>
        <summaryForeignKey>ACCL__Sales_Folder_Sell_Sheet__c.ACCL__Sales_Folder__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <description>Description based on the user specific language.</description>
        <formula>CASE($User.ACCL__Language_Postfix__c, 
&quot;Language1&quot;, ACCL__Description_Language_1__c, 
&quot;Language2&quot;, BLANKVALUE(ACCL__Description_Language_2__c,ACCL__Description_Language_1__c), 
&quot;Language3&quot;, BLANKVALUE(ACCL__Description_Language_3__c,ACCL__Description_Language_1__c), 
&quot;Language4&quot;, BLANKVALUE(ACCL__Description_Language_4__c,ACCL__Description_Language_1__c),ACCL__Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Note__c</fullName>
        <description>General Notes about the Sales Folder.</description>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Org_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the org unit.</description>
        <label>Org Unit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.ACCL__Sales_Org__c</field>
                <operation>equals</operation>
                <valueField>ACCL__Org_Unit__c.ACCL__Sales_Org__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Org_Unit__c</referenceTo>
        <relationshipLabel>Sales Folders</relationshipLabel>
        <relationshipName>Sales_Folders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Folder_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Sales Folder Template</description>
        <label>Sales Folder Template</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No matches found or Sales Folder Template is not active.</errorMessage>
            <filterItems>
                <field>ACCL__Sales_Folder_Template__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Sales_Folder_Template__c</referenceTo>
        <relationshipLabel>Sales Folders</relationshipLabel>
        <relationshipName>Sales_Folders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <description>Describes the sales org which the sales folder belongs to.</description>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Sales_Org</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <description>First date of validity period of the sales folder.</description>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <description>Last date of validity period of the sales folder.</description>
        <label>Valid Thru</label>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>MDLZ_AccTeam__c</fullName>
        <description>Indicates the team information of the account. Used for filtering.</description>
        <formula>ACCL__Account__r.MDLZ_AccountTeam__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_AccTerritory__c</fullName>
        <description>Indicates the territory information of the account. Used for filtering.</description>
        <formula>ACCL__Account__r.MDLZ_AccountTerritory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_AccountTeam__c</fullName>
        <description>Indicates the team information of the account</description>
        <label>Account Team</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_AccountTerritory__c</fullName>
        <description>Indicates the territory information of the account</description>
        <label>Account Territory</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_Customer_Sets__c</fullName>
        <label>Customer Sets</label>
        <type>TextArea</type>
    </fields>
	<fields>
        <fullName>MDLZ_KeyAccount__c</fullName>
        <label>KeyAccount</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_Master_Record__c</fullName>
        <label>Master Record</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_Parent_RecordId__c</fullName>
        <label>Parent RecordId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_Unique_Name__c</fullName>
        <label>Unique Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Sales Folder</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>MDLZ_Master_Record__c</columns>
        <columns>MDLZ_Customer_Sets__c</columns>
        <columns>ACCL__Sales_Folder_Template__c</columns>
        <columns>ACCL__Account__c</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Valid_From__c</columns>
        <columns>ACCL__Valid_Thru__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Mondelez_Sales_Folders</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Active__c</columns>
        <columns>MDLZ_Customer_Sets__c</columns>
        <columns>ACCL__Org_Unit__c</columns>
        <columns>ACCL__Sales_Folder_Template__c</columns>
        <columns>ACCL__Valid_From__c</columns>
        <columns>ACCL__Valid_Thru__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MDLZ_Parent_RecordId__c</field>
            <operation>equals</operation>
        </filters>
        <label>Mondelez Sales Folders</label>
    </listViews>
    <nameField>
        <label>Sales Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Folders</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ACCL__Check_If_Customer_Is_Empty</fullName>
        <active>true</active>
        <description>If Sales_Folder_Template has field Anchor_Type as BusinessPartner then Account__c cannot be empty.</description>
        <errorConditionFormula>ISPICKVAL(ACCL__Sales_Folder_Template__r.ACCL__Anchor_Type__c, &apos;BusinessPartner&apos;) &amp;&amp; ISBLANK(ACCL__Account__c)</errorConditionFormula>
        <errorMessage>The Customer cannot be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Check_If_Customer_Sales_Org_Matches</fullName>
        <active>true</active>
        <description>The Customer and the Sales Folder must have the same Sales Org.</description>
        <errorConditionFormula>ISPICKVAL(ACCL__Sales_Folder_Template__r.ACCL__Anchor_Type__c, &apos;BusinessPartner&apos;) &amp;&amp; NOT(ISBLANK(ACCL__Account__c)) &amp;&amp; ACCL__Account__r.ACCL__Sales_Org__c &lt;&gt; TEXT(ACCL__Sales_Org__c)</errorConditionFormula>
        <errorMessage>The Customer and the Sales Folder must have the same Sales Org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Check_If_Org_Unit_Is_Empty</fullName>
        <active>true</active>
        <description>If Sales_Folder_Template has field Anchor_Type as OrgUnit then Org_Unit__c cannot be empty.</description>
        <errorConditionFormula>ISPICKVAL(ACCL__Sales_Folder_Template__r.ACCL__Anchor_Type__c, &apos;OrgUnit&apos;) &amp;&amp; ISBLANK(ACCL__Org_Unit__c)</errorConditionFormula>
        <errorMessage>The Org Unit cannot be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Check_If_Org_Unit_Sales_Org_Matches</fullName>
        <active>true</active>
        <description>The Org Unit and the Sales Folder must have the same Sales Org.</description>
        <errorConditionFormula>ISPICKVAL(ACCL__Sales_Folder_Template__r.ACCL__Anchor_Type__c, &apos;OrgUnit&apos;) &amp;&amp; NOT(ISBLANK(ACCL__Org_Unit__c)) &amp;&amp; TEXT(ACCL__Org_Unit__r.ACCL__Sales_Org__c) &lt;&gt; TEXT(ACCL__Sales_Org__c)</errorConditionFormula>
        <errorMessage>The Org Unit and the Sales Folder must have the same Sales Org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Check_If_Sales_Org_Is_Changed</fullName>
        <active>true</active>
        <description>The Sales Org cannot be edited after Sales Folder creation.</description>
        <errorConditionFormula>ISCHANGED(ACCL__Sales_Org__c)</errorConditionFormula>
        <errorMessage>The Sales Org can&apos;t be edited after Sales Folder creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Check_If_Valid_From_More_Than_Valid_Thru</fullName>
        <active>true</active>
        <description>Valid From can&apos;t be later than Valid Thru.</description>
        <errorConditionFormula>ACCL__Valid_From__c  &gt;  ACCL__Valid_Thru__c</errorConditionFormula>
        <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Check_Sales_Folder_Template_Sales_Org</fullName>
        <active>true</active>
        <description>The Sales Folder and the Sales Folder Template must have the same Sales Org.</description>
        <errorConditionFormula>TEXT(ACCL__Sales_Org__c)!= TEXT(ACCL__Sales_Folder_Template__r.ACCL__Sales_Org__c)</errorConditionFormula>
        <errorMessage>The Sales Folder and the Sales Folder Template must have the same Sales Org.</errorMessage>
    </validationRules>
</CustomObject>